format code style, cleanup